<resources>
    <string name="app_name">Atala PRISM</string>
    <string name="scan_qr">Scan QR code</string>
    <string name="connection_label">Connect to an organization to receive your credentials</string>
    <string name="connection_secondary_label">Receive, store and share your digital credentials</string>
    <string name="connections_activity_title">Connections</string>
    <string name="terms_and_conditions_activity_title">Terms and Conditions</string>
    <string name="wallet_setup_activity_title">Your Seed Phrase</string>
    <string name="seed_phrase_verification_activity_title">Verify Seed Phrase</string>
    <string name="qr_scanner_activity_title">Scan QR</string>
    <string name="credential_government_type_title">\n• ID Credential </string>
    <string name="credential_degree_type_title">\n• University Credential </string>
    <string name="credential_employed_type_title">\n• Employment Credential </string>
    <string name="credential_insurance_type_title">\n• Insurance Credential </string>
    <string name="account_creation">Account Creation</string>
    <string name="terms_and_conditions_description">Please indicate that you have read and agree to the Terms and Conditions and the Privacy Policy Agreement</string>
    <string name="privacy_policies_agreement">Privacy Policy Agreement</string>
    <string name="about_title">About us</string>
    <string name="about_version">Atala PRISM version </string>
    <string name="about_version_number">129.1</string>
    <string name="about_version_server">Testing</string>
    <string name="about_terms_title">Terms &amp; Conditions</string>
    <string name="about_terms_date">Last Updated: May 20, 2019</string>
    <string name="about_policy_title">Privacy Policy</string>
    <string name="about_policy_date">Last Updated: May 20, 2019</string>
    <string name="about_built">Atala PRISM powered by Cardano</string>
    <string name="about_year">© 2020 IOHK</string>
    <string name="seed_phrase_description">Your Seed Phrase is used to generate and recover your account.</string>
    <string name="seed_phrase_explanation">Please save these 12 words on a piece of paper. The order is important. This seed will allow you to recover your account.</string>
    <string name="seed_phrase_acceptance">I understand that if I lose my seed phrase,\nI will not be able to recover my account.</string>
    <string name="seed_phrase_verification_description">Enter the following words to verify your Seed Phrase</string>
    <string name="word_numeric">Word #%1$d</string>
    <string name="credential_degree_name">University Degree</string>
    <string name="credential_government_name">Government ID</string>
    <string name="credential_employment_name">Proof of Employment</string>
    <string name="credential_insurance_name">Health Insurance</string>
    <string name="degree_name">Degree Name</string>
    <string name="bachelors_in_engineering">Bachelor\'s in Engineering</string>
    <string name="university_name">University Name</string>
    <string name="free_university_Tbilisi">Free University Tbilisi</string>
    <string name="some_date">10/2/2019</string>
    <string name="graduation_date">Graduation Date</string>
    <string name="start_date">Start Date</string>
    <string name="employment_start_date">Employment Start Date</string>
    <string name="insurance_end_date">Policy End Date</string>
    <string name="insurance_number">Policy Number</string>
    <string name="insurance_class">Class of Insurance</string>
    <string name="full_name">Full Name</string>
    <string name="award_name">Award</string>
    <string name="some_name">Gergi Beridze</string>
    <string name="some_award">First Class Honours</string>
    <string name="award">Award</string>
    <string name="national_card">National ID Card</string>
    <string name="university_degree">University Degree</string>
    <string name="issuance_date">Issuance Date</string>
    <string name="company_name">Company Name</string>
    <string name="employment_status">Employment Status</string>
    <string name="provider_name">Provider Name</string>
    <string name="decline">Decline</string>
    <string name="confirm">Confirm</string>
    <string name="share_information_credential">Share the following information to process your credential:</string>
    <string name="payment_activity_title">Payment</string>
    <string name="image_description">Image description</string>
    <string name="permission_denied_message">You have to grant camera permission to continue</string>
    <string name="welcome">Welcome</string>
    <string name="get_started">Get started</string>
    <string name="empty_title" />
    <string name="tutorial_step_1_slogan_1">Own and share your data</string>
    <string name="tutorial_step_1_slogan_2">Store all your important documents in one place and share in easy, secure and private way</string>
    <string name="tutorial_step_2_slogan_1">Take control of your personal information</string>
    <string name="tutorial_step_2_slogan_2">Secure your personal information and only share what you need to</string>
    <string name="tutorial_step_3_slogan_1">Get instant access to services</string>
    <string name="tutorial_step_3_slogan_2">Prove your identity in one click and instantly access services everywhere Atala PRISM is supported</string>
    <string name="accept">Accept</string>
    <string name="verify">Verify</string>
    <string name="continue_string">Continue</string>
    <string name="create_account">Create Account</string>
    <string name="restore_account">Restore Account</string>
    <string name="more_info">More info</string>
    <string name="universities">Universities</string>
    <string name="employers">Employers</string>
    <string name="home_title">Credentials</string>
    <string name="view">View</string>
    <string name="new_credentials_section_title">You have new credential(s)</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="wallet">Wallet</string>
    <string name="home">Credentials</string>
    <string name="profile">Profile</string>
    <string name="connections">Connections</string>
    <string name="contacts">Contacts</string>
    <string name="notifications">Notifications</string>
    <string name="backup_button_name">Backup Data</string>
    <string name="backup_button_description">Create a backup now</string>
    <string name="security_button_name">Security</string>
    <string name="security_button_description">Secure app with a Pin or Biometrics</string>
    <string name="pin_code_button_name">PIN Code</string>
    <string name="pin_code_button_description">Change the code to unlock this app</string>
    <string name="support_button_name">Support</string>
    <string name="support_button_description">Get in touch with us</string>
    <string name="about_button_name">About</string>
    <string name="about_button_description">Legal and version information</string>
    <string name="support_title">Support</string>
    <string name="custom_date_button_name">Date</string>
    <string name="custom_date_button_description">Custom date format</string>
    <string name="receive_credential">Receive Credential</string>
    <string name="receive_credential_description">In order to receive your digital\ncredential then please pay issuance fee</string>
    <string name="credit_card_number">Credit Card Number</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="cvv_number">CVV Number</string>
    <string name="cardholder_name">Cardholder Name</string>
    <string name="amount">Amount</string>
    <string name="some_amount">₾ 10</string>
    <string name="wallet_title">Wallet</string>
    <string name="credit_card_option_name">Credit card</string>
    <string name="digital_lari_option_name">Digital Lari</string>
    <string name="cash_option_name">Cash</string>
    <string name="wire_transfer_option_name">Wire Transfer</string>
    <string name="payment_history_menu_item_label">Payment history</string>
    <string name="payment_history">Payment History</string>
    <string name="charged">Charged</string>
    <string name="pending">Pending</string>
    <string name="failed">Failed</string>
    <string name="my_id_code">My ID Code</string>
    <string name="some_id">1BoatSLRHtKNngkdXEeobR76b53LETtpyT</string>
    <string name="some_email">gergi.beridze@gmail.com</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="personal_title">Personal</string>
    <string name="qr_code_title">QR Code</string>
    <string name="country">Country</string>
    <string name="birth_date">Birth Date</string>
    <string name="congrats">Congrats!</string>
    <string name="credential_payment_successful">Your Credential payment has been made successfully</string>
    <string name="your_account_has_been_created">Your account has been created</string>
    <string name="continue_connection">Continue to start the connection process </string>
    <string name="new_connection">New Connection</string>
    <string name="share_credential">Share Credential</string>
    <string name="share">Share!</string>
    <string name="terms_and_conditions_asset_name">terms-and-conditions-ka</string>
    <string name="email">Email</string>
    <string name="coming_soon">COMING SOON</string>
    <string name="hello_username">Hello!</string>
    <string name="accept_conneciton">Accept connection</string>
    <string name="education">Education</string>
    <string name="ok">OK</string>
    <string name="error">ERROR</string>
    <string name="server_error_message">Please try again. If the error persists contact support.</string>
    <string name="server_share_successfully">Successfully shared!</string>
    <string name="select_all_credential_alert">You have to select all the credentials.</string>
    <string name="connection_acept_title">Would you like to connect with</string>
    <string name="connection_re_acept_title">You have already connected to</string>
    <string name="connection_acept_button">Confirm</string>
    <string name="connection_re_acept_button">Connect again</string>
    <string name="employee_name">Employee Name</string>
    <string name="already_connected_reset_data">You have already connected with %1$s. Please reset the data in the settings and reset the interactive city map.</string>
    <string name="setting_up">Setup</string>
    <string name="pin_code">Pin Code</string>
    <string name="steps_numbers">1 of 2</string>
    <string name="steps_numbers_two">2 of 2</string>
    <string name="set_up_title">Enter a 4 digit code</string>
    <string name="pin_code_uppercase">PIN CODE</string>
    <string name="pin_code_confirm_uppercase">CONFIRM YOUR PIN CODE</string>
    <string name="touch">Touch ID</string>
    <string name="touch_description">Touch ID enables quick and easy login without a password. Please enable the App to use Touch ID under Settings</string>
    <string name="allow_touch">Enable Touch ID</string>
    <string name="not_now">Not Now</string>
    <string name="use_touch">Use Fingerprint as Pin</string>
    <string name="change_pin">Change Pin Code</string>
    <string name="write_pin">Enter your PIN</string>
    <string name="incorrect_pin_code">Incorrect PIN CODE</string>
    <string name="same_pin_required">Pins has to be the same</string>
    <string name="incorrect_current_pin">Your current PIN is incorrect</string>
    <string name="wrong_pin_size">Pin length must be %1$d characters long</string>
    <string name="reset_data">Reset Data</string>
    <string name="delete_contacts_credentials"><![CDATA[Delete contacts & credentials]]></string>
    <string name="reset">Reset</string>
    <string name="you_have_already_connected">You have already connected with:</string>
    <string name="connections_remove_success">Contacts and credentials successfully removed</string>
</resources>