<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">
  <item
    android:id="@+id/action_payment_history"
    android:icon="@drawable/ic_payment_history"
    android:title="@string/payment_history_menu_item_label"
    android:visible="false"
    app:showAsAction="always" />
  <item
    android:id="@+id/action_edit_profile"
    android:icon="@drawable/ic_edit"
    android:title="@string/edit_profile"
    android:visible="false"
    app:showAsAction="ifRoom" />
  <item
    android:id="@+id/action_new_connection"
    android:icon="@drawable/ic_scan_qr_menu_item_red"
    android:title="@string/new_connection"
    android:visible="false"
    app:showAsAction="ifRoom" />
  <item
    android:id="@+id/action_share_credential"
    android:icon="@drawable/ic_share"
    android:title="@string/share_credential"
    android:visible="false"
    app:showAsAction="ifRoom" />
</menu>