<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@drawable/bg_settings"
      android:paddingTop="25dp"
      android:paddingBottom="20dp">

        <io.iohk.cvp.views.utils.components.OptionItem
            android:id="@+id/backup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_default_side_margin"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="@dimen/activity_default_side_margin"
            app:actionImage="@drawable/arrow_right_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:logoImage="@drawable/ic_backup"
            app:primaryText="@string/backup_button_name"
            app:secondaryText="@string/backup_button_description" />

      <io.iohk.cvp.views.utils.components.OptionItem
          android:id="@+id/delete_credentials"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/activity_default_side_margin"
          android:layout_marginTop="16dp"
          android:layout_marginEnd="@dimen/activity_default_side_margin"
          app:actionImage="@drawable/arrow_right_grey"
          app:isAvailable="true"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/backup"
          app:logoImage="@drawable/ic_reset"
          app:primaryText="@string/reset"
          app:secondaryText="@string/delete_contacts_credentials" />

        <io.iohk.cvp.views.utils.components.OptionItem
            android:id="@+id/security"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_default_side_margin"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/activity_default_side_margin"
            app:actionImage="@drawable/arrow_right_grey"
            app:isAvailable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/delete_credentials"
            app:logoImage="@drawable/ic_security"
            app:primaryText="@string/security_button_name"
            app:secondaryText="@string/security_button_description" />

        <io.iohk.cvp.views.utils.components.OptionItem
            android:id="@+id/support"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_default_side_margin"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/activity_default_side_margin"
            app:isAvailable="true"
            app:actionImage="@drawable/arrow_right_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/security"
            app:logoImage="@drawable/ic_support"
            app:primaryText="@string/support_button_name"
            app:secondaryText="@string/support_button_description" />

        <io.iohk.cvp.views.utils.components.OptionItem
            android:id="@+id/about"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_default_side_margin"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/activity_default_side_margin"
            app:isAvailable="true"
            app:actionImage="@drawable/arrow_right_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/support"
            app:logoImage="@drawable/ic_about"
            app:primaryText="@string/about_button_name"
            app:secondaryText="@string/about_button_description" />

        <io.iohk.cvp.views.utils.components.OptionItem
            android:id="@+id/backend_ip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_default_side_margin"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/activity_default_side_margin"
            app:actionImage="@drawable/arrow_right_grey"
            app:isAvailable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/about"
            app:logoImage="@drawable/ic_about"
            app:primaryText="Backend config"
            app:secondaryText="Set api url and port" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>