<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/white"
  tools:context=".views.activities.TermsAndConditionsActivity">

  <FrameLayout
    android:id="@+id/large_description_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="16dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="24dp"
    android:layout_marginEnd="24dp">

    <TextView
      android:id="@+id/text_view_1"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:text="@string/account_creation"
      android:textAlignment="textStart"
      app:layout_constraintHorizontal_bias="0.495"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <TextView
      android:id="@+id/text_view_2"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="@string/terms_and_conditions_activity_title"
      android:textAlignment="textStart"
      android:textColor="@color/black"
      android:textSize="28sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/text_view_1" />

    <TextView
      android:id="@+id/text_view_3"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="@string/terms_and_conditions_description"
      android:textAlignment="textStart"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/text_view_2" />

    <io.iohk.cvp.views.utils.components.CheckboxWithDescription
      android:id="@+id/terms_and_conditions_checkbox_layout"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/text_view_3"
      app:link_text="@string/terms_and_conditions_activity_title"
      app:text="@string/accept" />

    <io.iohk.cvp.views.utils.components.CheckboxWithDescription
      android:id="@+id/privacy_policy_checkbox_layout"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/terms_and_conditions_checkbox_layout"
      app:link_text="@string/privacy_policies_agreement"
      app:text="@string/accept" />


    <Button
      android:id="@+id/continue_button"
      android:layout_width="0dp"
      android:layout_height="64dp"
      android:layout_marginBottom="32dp"
      android:enabled="false"
      android:text="@string/continue_string"
      app:cornerRadius="32dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>