<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/white">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginEnd="24dp">

    <ImageView
      android:id="@+id/payment_logo"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:layout_marginTop="24dp"
      android:src="@drawable/ic_pay_credential"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <TextView
      android:id="@+id/text_view_title"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/receive_credential"
      android:textAlignment="center"
      android:textColor="@color/black"
      android:textSize="20sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/payment_logo" />

    <TextView
      android:id="@+id/text_view_subtitle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="4dp"
      android:text="@string/receive_credential_description"
      android:textAlignment="center"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/text_view_title" />

    <TextView
      android:id="@+id/text_view_label_amount"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/amount"
      android:textAlignment="textStart"
      android:textColor="@color/grey"
      android:textSize="18sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/text_view_subtitle" />

    <TextView
      android:id="@+id/text_view_amount"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:text="@string/some_amount"
      android:textAlignment="textStart"
      android:textColor="@color/black"
      android:textSize="18sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@id/text_view_label_amount"
      app:layout_constraintTop_toBottomOf="@id/text_view_subtitle" />

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/text_input_layout_credit_card_number"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:hint="@string/credit_card_number"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/text_view_amount">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_credit_card_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/text_input_layout_expiry_date"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:hint="@string/expiry_date"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/text_input_layout_credit_card_number">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_expiry_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/text_input_layout_cvv_number"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:hint="@string/cvv_number"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/text_input_layout_expiry_date">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_cvv_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/text_input_layout_cardholder_name"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:hint="@string/cardholder_name"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/text_input_layout_cvv_number">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_cardholder_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
      android:id="@+id/continue_button"
      android:layout_width="0dp"
      android:layout_height="64dp"
      android:layout_marginTop="32dp"
      android:layout_marginBottom="32dp"
      android:enabled="false"
      android:text="@string/continue_string"
      app:cornerRadius="32dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/text_input_layout_cardholder_name" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>