<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/white">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="24dp"
    android:layout_marginEnd="24dp">

    <TextView
      android:id="@+id/text_view_title"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="48dp"
      android:text="@string/wallet_setup_activity_title"
      android:textAlignment="textStart"
      android:textColor="@color/black"
      android:textSize="28sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <TextView
      android:id="@+id/text_view_subtitle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="@string/seed_phrase_description"
      android:textAlignment="textStart"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/text_view_title" />

    <GridView
      android:id="@+id/grid_view_seed_phrase"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:foregroundGravity="center"
      android:gravity="center"
      android:horizontalSpacing="8dp"
      android:numColumns="3"
      android:paddingTop="8dp"
      android:paddingBottom="8dp"
      android:verticalSpacing="8dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/text_view_subtitle" />


    <TextView
      android:id="@+id/text_view_description"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/seed_phrase_explanation"
      android:textAlignment="textStart"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/grid_view_seed_phrase" />

    <io.iohk.cvp.views.utils.components.CheckboxWithDescription
      android:id="@+id/acceptance_checkbox"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/text_view_description"
      app:text="@string/seed_phrase_acceptance" />

    <Button
      android:id="@+id/accept_button"
      android:layout_width="0dp"
      android:layout_height="64dp"
      android:layout_marginBottom="32dp"
      android:enabled="false"
      android:text="@string/accept"
      app:cornerRadius="32dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>